--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" />
-    <title>AHM Gestion de Presupuestos</title>
+    <title>AHM Generador Informes SSO</title>
 
-    <meta name="description" content="AHM Gestion de Presupuestos" />
+    <meta name="description" content="AHM Generador Informes SSO" />
 
     <meta property="og:url" content="https://justboil.github.io/admin-one-vue-tailwind/" />
     <meta property="og:site_name" content="JustBoil.me" />
     <meta property="og:title" content="AHM" />
     <meta
       property="og:description"
-      content="AHM Gestion de Presupuestos"
+      content="AHM Generador Informes SSO"
     />
     <meta
       property="og:image"
@@ -28,7 +28,7 @@
     <meta property="twitter:title" content="Admin One Vue.js 3 Tailwind free" />
     <meta
       property="twitter:description"
-      content="AHM Gestion de Presupuestos"
+      content="AHM Generador Informes SSO"
     />
     <meta
       property="twitter:image:src"
